maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: forward reference extends over definition of variable sommeAngle
	sommeAngle=sommeAngle+1
        ^